found_bugs/kotlin/9/compiler_output
program.kt:3:14: error: accidental override: The following declarations have the same JVM signature (getX()Ljava/lang/Character;):
    fun <get-x>(): Char defined in C
    fun getX(): Char defined in C
            class C(override var x: Char): B<Char>('x')
             ^
